@startuml Modul_G_Pengelolaan_Laporan

' Pengaturan visual agar profesional dan fungsional
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName "Arial"
skinparam defaultFontSize 14
skinparam titleFontSize 20

title Pengelolaan Laporan

    class PerformanceReport {
        - startPeriod: Date
        - endPeriod: Date
        - totalRevenue: Decimal
        - totalHPP: Decimal
        - costList: List<OperationalCost>
        - taxList: List<TaxConfig>
        + generateReport(start: Date, end: Date): void
        + calculateGrossProfit(): Decimal
        + calculateTotalOperationalCost(): Decimal
        + calculateTotalTax(): Decimal
        + calculateNetProfit(): Decimal
        + exportToPDF(): String
    }

    class OperationalCost {
        - id: Integer
        - name: String
        - category: CostCategory
        - amount: Decimal
        - period: CostPeriod
        - effectiveFrom: Date
        - isActive: Boolean
        + calculateProportionalCost(days: Integer): Decimal
        + deactivate(): void
    }

    class TaxConfig {
        - id: Integer
        - name: String
        - type: TaxType
        - rate: Decimal
        - fixedAmount: Decimal
        - appliesTo: TaxAppliesTo
        - isActive: Boolean
        + calculateTax(revenueBasis: Decimal, netProfitBasis: Decimal): Decimal
    }

    enum CostCategory {
        UTILITIES
        SALARY
        RENT
        LOGISTICS
        MARKETING
        MAINTENANCE
        OTHER
    }

    enum CostPeriod {
        DAILY
        WEEKLY
        MONTHLY
        YEARLY
        ONE_TIME
    }

    enum TaxType {
        PERCENTAGE
        FIXED
    }

    enum TaxAppliesTo {
        REVENUE
        NET_PROFIT
    }

    ' Relationships
    PerformanceReport "1" o-- "0..*" OperationalCost : includes >
    PerformanceReport "1" o-- "0..*" TaxConfig : includes >
    OperationalCost ..> CostCategory : category >
    OperationalCost ..> CostPeriod : period >
    TaxConfig ..> TaxType : type >
    TaxConfig ..> TaxAppliesTo : basis object >
    PerformanceReport "1" ..> "0..*" Sale : calculates from >
    PerformanceReport "1" ..> "0..*" PurchaseOrder : calculates from >
    OperationalCost "0..*" -- "1" User : created by >
    TaxConfig "0..*" -- "1" User : created by >

    class Sale <<external>> {
        - id: Integer
        - invoiceNumber: String
    }
    class PurchaseOrder <<external>> {
        - id: Integer
        - orderNumber: String
    }
    class User <<external>> {
        - id: Integer
        - name: String
    }


@enduml
